--- a/connect4.html
+++ b/connect4.html
@@ -13,165 +13,25 @@
   <body>
     <h1>Connect Four</h1>
 
-    <p class="info">Connect4 is a <strong>two player</strong> game, no AI involved. Select a color and click 'start game' to begin. The winner is determined by whomever gets <strong>4 pieces in a row</strong> (horizontally, vertically, diagonally). <br> <button id = "startGame" onclick = "startGame()">Start Game</button> <button id = "restartGame" onclick = "restartGame()">Play Again</button></p>
+    <p class="info">Connect4 is a <strong>two player</strong> game, no AI involved. Select a color and
+      click 'start game' to begin. The winner is determined by whomever gets
+      <strong>4 pieces in a row</strong> (horizontally, vertically, diagonally).
+      <br>
+      <button id = "startGame" onclick = "startGame()">Start Game</button>
+      <button id = "restartGame" onclick = "restartGame()">Play Again</button></p>
 
     <div class = "player1"><span class = "chip"></span><br>Player 1
+      <br>
       <button id = "p1ColorChange" onclick="document.querySelector('div.player1').style.color = changeColor(colorPalette2)">Select Color</button>
     </div>
 
     <div id = "gridContainer"></div>
 
     <div class = "player2"><span class = "chip"></span><br>Player 2
+      <br>
       <button id = "p2ColorChange" onclick="document.querySelector('div.player2').style.color = changeColor(colorPalette1)">Select Color</button>
     </div>
 
-  <script>
-
-let currPlayer;
-
-const player1 = 1;
-const player2 = 2;
-let player1Color = "#99e6ff";
-let player2Color = "#ff9999";
-
-const numCols = 7;
-const numRows = 6;
-const cellWidth = 85;
-const cellSpacing = 1;
-
-
-const container = document.querySelector("#gridContainer");
-
-const span = document.createElement('span');
-span.className = 'cell';
-
-const cells = [];
-
-	for (let row = 0; row < numRows; row++) {
-		cells.push([]);
-		for (let col = 0; col < numCols; col++) {
-			let cell = span.cloneNode();
-			cell.style.left = `${col * (cellWidth + cellSpacing)}px`;
-			cell.style.top = `${row * (cellWidth + cellSpacing)}px`;
-			container.appendChild(cell);
-			cells[row][col] = cell;
-		}
-	}
-
-function startGame() {
-	let chip = document.querySelectorAll('span.chip');
-
-	//Decides who goes first by random
-	let randNum = (Math.floor(Math.random() * 2) + 1);
-
-	if (randNum == 1) {
-		currPlayer = 1;
-		chip[0].style.visibility = "visible";
-		chip[1].style.visibility = "hidden";
-	}
-
-	else { 
-		currPlayer = 2;
-		chip[0].style.visibility = "hidden";
-		chip[1].style.visibility = "visible";
-	}
-
-	document.getElementById("p1ColorChange").style.visibility = "hidden"; //hides the buttons to change colors, so that the players cant change colors during the game
-  	document.getElementById("p2ColorChange").style.visibility = "hidden";
-  	document.getElementById("restartGame").style.visibility = "visible";
-  	document.getElementById("startGame").style.visibility = "hidden";
-
-	let p1Color = document.querySelector("div.player1");
-	let p2Color = document.querySelector("div.player2");
-
-  	player1Color = p1Color.style.color;
-  	player2Color = p2Color.style.color;
-}
-
-function restartGame() {
-	document.getElementById("p1ColorChange").style.visibility = "visible";
-  	document.getElementById("p2ColorChange").style.visibility = "visible";
-    document.getElementById("restartGame").style.visibility = "hidden";
-  	document.getElementById("startGame").style.visibility = "visible";
-
-    let chip = document.querySelectorAll('span.chip');
-
-	chip[0].style.visibility = "hidden";
-	chip[1].style.visibility = "hidden";
-}
-
-let p1 = document.querySelector("#p1ColorChange");
-let p2 = document.querySelector("#p2ColorChange");
-
-//default color values for the player
-let colorPalette1 = ["#ff9999", "#CC0000", "#800000"];
-let colorPalette2 = ["#99e6ff", "#0099cc", "#006080"];
-
-let index = 0;
-
-//sets the color of the disc when the user clicks a button
-function changeColor(array) {
- 	index++;
-
- 	if (index == 3)
- 		index = 0;
-
-	return array[index]
-}
-
-//changes the chip color depending on which button was pressed
-function changeChipColor (p) {
-	let chip = document.querySelectorAll('span.chip');
-	let p1Color = document.querySelector("div.player1");
-	let p2Color = document.querySelector("div.player2");
-
-	if (p == 1)
-		chip[0].style.backgroundColor = p1Color.style.color;
-
-	else if (p == 2)
-		chip[1].style.backgroundColor = p2Color.style.color;
-}
-
-p1.addEventListener("click", () => {changeChipColor(1); }, false);
-p2.addEventListener("click", () => {changeChipColor(2); }, false);
-
-container.onclick = placeChip;
-
-function placeChip (e) {
-	let rect = container.getBoundingClientRect();
-	let mouseX = e.clientX - rect.left;
-	let mouseY = e.clientY - rect.top;
-	let columnWidth = cellWidth + cellSpacing;
-	let col = Math.floor(mouseX/columnWidth);
-	let row = Math.floor(mouseY/columnWidth);
-	let selectedCell = cells[row][col];
-	selectedCell.className = 'cellSelected';
-
-	if (currPlayer == 1) {
-		selectedCell.style.backgroundColor = player1Color;
-		currPlayer = 2;
-	}
-
-	else {
-		selectedCell.style.backgroundColor = player2Color;
-		currPlayer = 1;
-	}
-}
-
-/*
-Checks to see if the column has other pieces
-*/
-function check(col) {
-	//recursive?
-
-	//go through the column go down the row
-	//check to see if the cell.style.backgroundColor != white;
-		//move down, check again
-
-	//go down until a) no more spaces in the column b) current cell is only one free
-
-}
-
-  </script>
+  <script src="connect4.js" charset="utf-8"></script>
   </body>
 </html>
