Updated the HTML
Fixed the start game button, added proper html to the documentation

--- a/connect4.html
+++ b/connect4.html
@@ -12,10 +12,11 @@
   </style>
   <body>
     <h1>Connect Four</h1>
+      <h3>Made by Calvin To and Ilana Leva</h3> 
 
     <p class="info">Connect4 is a <strong>two player</strong> game, no AI involved. Select a color and
       click 'start game' to begin. The winner is determined by whomever gets
-      <strong>4 pieces in a row</strong> (horizontally, vertically, diagonally).
+      <strong>4 pieces in a row</strong> (horizontally, vertically, diagonally).      Documentation can be found <a href = "https://github.com/ilana105/connect4/blob/master/P2_Documentation.md">here</a>.
       <br>
       <button id = "startGame" onclick = "startGame()">Start Game</button>
       <button id = "restartGame" onclick = "restartGame()">Play Again</button></p>
